--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style2.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
       Desenvolvido por KTORZDEV | Todos os direitos reservados - 2023
     </footer>
   </main>
-  <script src="main2.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
